# strapdown_integration

./: .gitignore  CMakeLists.txt  README.md  run.sh  test_simple_strapdown_integration.ipynb
include/: helper.h  strapdown_integration.c  strapdown_integration.h  vectors.h
misc/: sdi_figure_for_report.ipynb
python/: _sdi_figure.ipynb  compare_c_implementation_with_reference.ipynb  reference_strapdown_integration.ipynb  sdi_figure.ipynb  sdi_helper.py
src/: helper.c  process_strapdown_integration.c  strapdown_integration.c  vectors.c
tests/: simple_strapdown_reference.csv  simple_strapdown_reference_with_c.csv  strapdown_computed_with_c.csv
tex/: imu_error_model.tex  infertia_strapdown_integration.tex  strapdown_report.bib
